fixed spacing for logo

--- a/front-end/src/components/navbar/Navbar.scss
+++ b/front-end/src/components/navbar/Navbar.scss
@@ -2,7 +2,6 @@
     position: sticky;
     background-color: white;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.112);
-    // border-bottom: 1px solid rgba(128, 128, 128, 0.485);
     height: 75px;
     top: 0;
     display: flex;
@@ -14,6 +13,7 @@
 
     .optiLogo {
         height: 100%;
+        margin-left: 15px;
     }
 
     .mainnavbar-right {
